// 首行：语法制定行，如果不加的话默认是proto2
/* 首行指的是去除注释的第一行 */
syntax = "proto3";
package contacts2; //包命名空间，一个项目中package的命名是唯一的

import "google/protobuf/any.proto";

message Address {
  string home_address = 1; // 家庭住址
  string work_address = 2; // 单位地址
}

//定义联系人message
message PeopleInfo {
  string name = 1; //姓名 =1不是赋值，而是标识字段编号
  int32 age = 2; //年龄 不同的字段要用不同的标识

  message Phone {
    string number = 1;

    // nested enum in message

    enum PhoneType {
    MP = 0; // moble phone // 单位地址
    TEL = 1; // telephone
    }

    PhoneType type = 2;
  }

  repeated Phone phone = 3;
  google.protobuf.Any data = 4;
}

//定义通讯录 message
message Contacts {
  repeated PeopleInfo contacts = 1;
}
